# FLOS

./: .gitignore  README.md  bugs.md  build-tool-feature-ideas.md  final-hardware.txt  go.work  hardware-problems-first.txt  hardware-problems-second-nl.txt  hardware-problems-second.txt  notes.md  setup-memory.md  text.md  to-c-operations.txt  todo.md
cmd/: build-go.sh  gdb.sh  (+1 more)
projects/abstraction/: CMakeLists.txt
projects/abstraction/efi-to-kernel/code/: CMakeLists.txt
projects/abstraction/efi-to-kernel/code/include/abstraction/: efi-to-kernel.h
projects/abstraction/efi/code/: CMakeLists.txt
projects/abstraction/efi/code/include/abstraction/: efi.h
projects/abstraction/interrupts/code/: CMakeLists.txt
projects/abstraction/interrupts/code/include/abstraction/: interrupts.h
projects/abstraction/jmp/code/: CMakeLists.txt
projects/abstraction/jmp/code/include/abstraction/: jmp.h
projects/abstraction/kernel/code/: CMakeLists.txt
projects/abstraction/kernel/code/include/abstraction/: kernel.h
projects/abstraction/log/code/: CMakeLists.txt
projects/abstraction/log/code/include/abstraction/: log.h
projects/abstraction/memory/management/code/: CMakeLists.txt
projects/abstraction/memory/manipulation/code/: CMakeLists.txt  manipulation.h.in
projects/abstraction/memory/physical/code/: CMakeLists.txt
projects/abstraction/memory/virtual/code/: CMakeLists.txt
projects/abstraction/memory/virtual/status/code/: CMakeLists.txt
projects/abstraction/serial/code/: CMakeLists.txt
projects/abstraction/serial/code/include/abstraction/: serial.h
projects/abstraction/text/converter/code/: CMakeLists.txt
projects/abstraction/thread/code/: CMakeLists.txt
projects/abstraction/thread/code/include/abstraction/: thread.h
projects/abstraction/time/code/: CMakeLists.txt
projects/abstraction/time/code/include/abstraction/: time.h
projects/efi-to-kernel/code/: CMakeLists.txt  create_magic.py
projects/efi-to-kernel/code/include/efi-to-kernel/: kernel-parameters.h
projects/efi-to-kernel/code/include/efi-to-kernel/memory/: definitions.h
projects/efi-to-kernel/code/src/: kernel-parameters.c
projects/efi/code/: CMakeLists.txt
projects/efi/code/acpi/src/: rsdp.c
projects/efi/code/error/: CMakeLists.txt
projects/efi/code/error/include/efi/: error.h
projects/efi/code/error/src/: error.c
projects/efi/code/firmware/: CMakeLists.txt
projects/efi/code/globals/: CMakeLists.txt
projects/efi/code/globals/include/efi/: globals.h
projects/efi/code/interrupts/: CMakeLists.txt
projects/efi/code/interrupts/src/: interrupts.c
projects/efi/code/log/: CMakeLists.txt
projects/efi/code/log/src/: log.c
projects/efi/code/memory/: CMakeLists.txt
projects/efi/code/memory/include/efi/: memory.h
projects/efi/code/memory/src/: physical.c  virtual.c
projects/efi/code/memory/src/virtual/: allocator.c
projects/freestanding/code/memory/policy/: CMakeLists.txt
projects/freestanding/code/memory/policy/src/: policy.c
projects/freestanding/code/memory/policy/status/: CMakeLists.txt
projects/freestanding/code/memory/virtual/: CMakeLists.txt
projects/freestanding/code/memory/virtual/src/: allocator.c  virtual.c
projects/freestanding/code/memory/virtual/status/: CMakeLists.txt
projects/freestanding/x86/: CMakeLists.txt
projects/freestanding/x86/code/: CMakeLists.txt
projects/freestanding/x86/code/kernel/: CMakeLists.txt
projects/freestanding/x86/code/kernel/src/: kernel.c
projects/mapping-test/code/: CMakeLists.txt
projects/mapping-test/code/src/: main.c
projects/os-loader/code/: CMakeLists.txt
projects/os-loader/code/include/os-loader/: apic.h  data-reading.h  memory.h
projects/os-loader/code/include/os-loader/memory/: boot-functions.h
projects/os-loader/code/src/: data-reading-old.c  data-reading.c  main.c  memory.c
projects/os-loader/code/src/memory/: boot-functions.c
projects/posix/code/file/: CMakeLists.txt
projects/posix/code/file/src/: path.c  read.c
projects/posix/code/test-framework/: CMakeLists.txt
projects/posix/code/test-framework/src/: expectations.c  test.c
projects/shared/code/memory/allocator/: CMakeLists.txt
projects/shared/code/memory/allocator/src/: arena.c  buddy.c  node.c  pool.c
projects/shared/code/memory/allocator/status/: CMakeLists.txt
projects/shared/code/memory/allocator/tests/: CMakeLists.txt
projects/shared/code/memory/management/: CMakeLists.txt
projects/shared/code/memory/management/src/: management.c  memory-tree.c  page.c
projects/shared/code/memory/management/status/: CMakeLists.txt
projects/shared/code/memory/page/: CMakeLists.txt
projects/shared/code/memory/page/src/: page.c
projects/shared/code/memory/physical/: CMakeLists.txt
projects/shared/code/text/converter/: CMakeLists.txt
projects/shared/code/trees/red-black/: CMakeLists.txt
projects/x86/code/: CMakeLists.txt
projects/x86/code/configuration/: CMakeLists.txt
projects/x86/code/configuration/src/: cpu.c  features.c
projects/x86/code/fault/: CMakeLists.txt
projects/x86/code/fault/print/: CMakeLists.txt
projects/x86/code/gdt/src/: gdt.c
projects/x86/code/idt/: CMakeLists.txt
projects/x86/code/idt/mock/: CMakeLists.txt
projects/x86/code/idt/real/: CMakeLists.txt
projects/x86/code/idt/src/: fault.c  idt.S  idt.c  init.c  isr.S  trigger.c
projects/x86/code/jmp/: CMakeLists.txt
projects/x86/code/jmp/src/: jmp.c
projects/x86/code/memory/: CMakeLists.txt
projects/x86/code/memory/src/: flags.c  page.c
projects/x86/code/memory/virtual/: CMakeLists.txt
projects/x86/code/serial/: CMakeLists.txt
projects/x86/code/serial/src/: serial.c
projects/x86/code/thread/: CMakeLists.txt
projects/x86/code/thread/src/: thread.c
projects/x86/code/time/: CMakeLists.txt
projects/x86/code/time/src/: time.c
projects/x86/efi-to-kernel/code/: CMakeLists.txt
projects/x86/efi/code/: CMakeLists.txt
projects/x86/efi/code/src/: gdt.c  init.c  jmp.c  jump.c  kernel.c
projects/x86/kernel/code/: CMakeLists.txt
projects/x86/kernel/code/idt/: CMakeLists.txt
projects/x86/kernel/code/src/: kernel.c
(+325 files in other folders)
